; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_os_mswin.c_mch_early_init.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_os_mswin.c_mch_early_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tolower_tab = common dso_local global i32* null, align 8
@toupper_tab = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mch_early_init() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %15, %0
  %3 = load i32, i32* %1, align 4
  %4 = icmp slt i32 %3, 256
  br i1 %4, label %5, label %18

5:                                                ; preds = %2
  %6 = load i32, i32* %1, align 4
  %7 = load i32*, i32** @tolower_tab, align 8
  %8 = load i32, i32* %1, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  store i32 %6, i32* %10, align 4
  %11 = load i32*, i32** @toupper_tab, align 8
  %12 = load i32, i32* %1, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  store i32 %6, i32* %14, align 4
  br label %15

15:                                               ; preds = %5
  %16 = load i32, i32* %1, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %1, align 4
  br label %2

18:                                               ; preds = %2
  %19 = load i32*, i32** @toupper_tab, align 8
  %20 = call i32 @AnsiUpperBuff(i32* %19, i32 256)
  %21 = load i32*, i32** @tolower_tab, align 8
  %22 = call i32 @AnsiLowerBuff(i32* %21, i32 256)
  ret void
}

declare dso_local i32 @AnsiUpperBuff(i32*, i32) #1

declare dso_local i32 @AnsiLowerBuff(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
